--- a/composer.json
+++ b/composer.json
@@ -32,5 +32,10 @@
 	"require-dev": {
 		"mikey179/vfsstream": "1.6.*",
 		"phpunit/phpunit": "4.* || 5.* || 9.*"
+	},
+	"config": {
+		"allow-plugins": {
+			"composer/audit": false
+		}
 	}
 }
